--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "26.0.2"
-
+    buildToolsVersion '25.0.3'
     defaultConfig {
-        applicationId "com.example.robot_talk_story"
-        minSdkVersion 15
+        applicationId "com.efrobot.talkstory"
+        minSdkVersion 19
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -23,4 +22,14 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:25.3.1'
+
+    compile 'com.efrobot.library.net:mvpnetlibrary:2.0.6'
+    compile 'com.danikula:videocache:2.7.0'
+//    compile 'de.hdodenhof:circleimageview:2.2.0'
+    compile 'com.song:circleimage:1.0.1'
+    //刷新库
+    compile project(':pullToRefreshlibrary')
+    compile 'org.xutils:xutils:3.4.0'
+    compile 'com.google.code.gson:gson:2.8.2'
+    compile 'com.hyman:flowlayout-lib:1.1.2'
 }
